Refactor ClassBuilder