@@ -8,7 +8,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import ru.nstu.isma.core.hsm.HSM;
 import ru.nstu.isma.generate.MemoryFileManager;
 import ru.nstu.isma.generate.MemoryJavaFileObject;
 
@@ -17,24 +16,10 @@ import ru.nstu.isma.generate.MemoryJavaFileObject;
  * on 14.03.2015.
  */
 public abstract class ClassBuilder<T> {
-    protected IndexMapper modelContext;
-    protected ClassLoader classLoader;
-
-    protected ClassBuilder() {
-    }
-
-    public ClassBuilder(IndexMapper modelContext) {
-        this.modelContext = modelContext;
-    }
-
-    public ClassBuilder(HSM hsm) {
-        modelContext = new IndexMapper(hsm);
-    }
-
     public abstract String getJavaString(String name);
 
     protected T build(String name, String pack, boolean printJava) {
-        T instance = null;
+
         try {
             String content = getJavaString(name);
             if (printJava) {
@@ -53,21 +38,12 @@ public abstract class ClassBuilder<T> {
 
             compiler.getTask(null, manager, null, options, null, files).call();
 
-            classLoader = manager.getClassLoader(null);
-            instance = (T) classLoader.loadClass(pack + name).newInstance();
+            var classLoader = manager.getClassLoader(null);
+            return (T) classLoader.loadClass(pack + name).getConstructor().newInstance();
         } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException(e);
             // todo errorlist
         }
-        return instance;
-    }
-
-    public IndexMapper getModelContext() {
-        return modelContext;
-    }
-
-    public ClassLoader getClassLoader() {
-        return classLoader;
     }
 }
